# secure-coding

./: .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  compose.test.yaml  compose.yaml  mkdocs.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml
.github/: pull_request_template.md  toolchain.json  verify_toolchain.py
.github/workflows/: ci.yml  cycle-one-release.yml  pages.yml  release.yml  report-renderer-image.yml
.gjc/skills/: manifest.md
docs/: index.md
docs/diagrams/: g2-chat-acceptance.mmd  g2-cycle1-erd.mmd  g2-moderation-state.mmd  g2-trust-flow.mmd
docs/report/: 01-requirements.md  02-system-design.md  03-implementation.md  04-checklist-and-testing.md  05-maintenance.md  06-security-improvements.md  decision-log.md  evidence-policy.md  final-report.md  index.md  phase-6r-governance.md  security-log.md  source-ledger.md  stitch-ui-manifest.json  toolchain.lock.md  verification-log.md
report/: metadata.yaml  pdf.css
report/renderer/: Dockerfile  inventory.py  pdf_inspect.py  puppeteer-config.json  render.py  requirements.txt
scripts/: check_public_site.py  redact-evidence.sh  render-report.sh  verify_g1.py  verify_pr_title.py  verify_stitch_manifest.py
src/: manage.py
src/config/: asgi.py  health.py  middleware.py  routing.py  settings.py  urls.py
src/static/: journey.js  site.css
src/templates/: 403.html  404.html  500.html  base.html  home.html
tests/e2e/: catalog-authority.spec.js  home-a11y.spec.js
tests/governance/: test_g2_architecture.py  test_g6_cycle_two_design_oracle.py  test_report_renderer.py  (+5 more)
(+155 files in other folders)
